<resources>
    <string name="app_name">FarmProject</string>
    <string name="FirstMilk">"كمية الحليب فى الحلبه الاولى"</string>
    <string name="SecondMilk">"كمية الحليب فى الحلبه الثانية"</string>
    <string name="ThirdMilk">"كمية الحليب فى الحلبه الثالثة"</string>
    <string name="Fat">"نسبة الدهن"</string>
    <string name="Protein">"نسبة البروتين"</string>
    <string name="type">"نوع التحصين"</string>
    <string name="date">"ميعاد الجرعه القادمه"</string>
    <string-array name="items">
        <item>عدد مرات الحلب اليومية</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--  Baby spinners -->
    <string-array name="Spinner_items">Spinner_items
        <item> نوع الولادة </item>
        <item> طبيعية </item>
        <item>بمساعدة طبيب بيطري  </item>
    </string-array>

    <string-array name="Spinner2_items">Spinner2_items
        <item> نوع المولود </item>
        <item> ذكر </item>
        <item>انثي </item>
    </string-array>

    <string-array name="Spinner3_items">Spinner3_items
        <item> نوع الفقد </item>
        <item> نافق </item>
        <item> مباع </item>
        <item>ذبح </item>

    </string-array>

    <string-array name="Spinner4_items">Spinner3_items
        <item> العمر </item>
        <item> يوم </item>
        <item> شهر </item>
        <item> سنة </item>

    </string-array>

    <string-array name="Spinner5_items">Spinner3_items
        <item> الحالة التناسلية </item>
        <item> عجلة </item>
        <item> عشار حديث </item>
        <item> عشار ثقيل </item>

    </string-array>

    <string-array name="Spinner6_items">Spinner3_items
        <item> نوع الحيوان </item>
        <item> ذكر </item>
        <item> انثى </item>

    </string-array>
    <string-array name="Spinner7_items">Spinner7_items
        <item>عدد التلقيحات للأخصاب </item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>

    </string-array>

    <string-array name="Spinner8_items">Spinner8_items
        <item> نتيجة التلقيح </item>
        <item> موجب </item>
        <item> سالب </item>

    </string-array>

    <string-array name="Spinner9_items">Spinner9_items
        <item> عدد الولادات السابقة </item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
    </string-array>

</resources>

