<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    tools:context=".Milk">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textAlignment="gravity"
        android:layout_gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_margin="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:padding="5dp" />

        <EditText
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:bufferType="editable"
            android:ems="10"
            android:hint="@string/FirstMilk"
            android:inputType="number"
            android:padding="5dp"
            android:visibility="gone" />
        <EditText
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:bufferType="editable"
            android:hint="@string/SecondMilk"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:bufferType="editable"
            android:hint="@string/ThirdMilk"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/Fat"
            android:inputType="number"
            android:bufferType="editable"
            android:padding="5dp"/>

    <EditText
        android:id="@+id/protein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Protein"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:inputType="number"
        android:bufferType="editable" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@android:dimen/app_icon_size"
        android:background="@color/blue"
        android:textColor="@android:color/white"
        android:text="إضافه" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>